scolar-core/language-component-tool/src/test/resources/cocos/languageComponents/invalid/AtLeastOneInterface.comp
package cocos.languageComponents.invalid;


language component AtLeastOneInterface {

}